Fixed a few typos
In the pizza file the Steps heading was missing

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -16,6 +16,7 @@
         <li>Toppings</li>
     </ul>
 
+    <h2>Steps</h2>
     <ol>
         <li>Preheat the oven to 500°F.</li>
         <li>Spread the pizza sauce onto the dough. Top with the fresh mozzarella and tomatoes and bake for 10 to 12 minutes, or until the crust is browned. Remove from the oven and top with fresh basil leaves and a pinch of red pepper flakes. Drizzle with olive oil and serve.</li>
